<resources>
    <string name="app_name">RiseUp_Users</string>
    <string name="riseup">Rise Up</string>
    <string name="config">Configuración</string>
    <string name="GeneraltTV">General</string>
    <string name="infoPersonal">Información personal</string>
    <string name="historialDiamantes">Historial de diamantes</string>
    <string name="PrivYseguridad">Privacidad y seguridad</string>
    <string name="caracteristicas">Características</string>
    <string name="permitirNotifi">Permitir Notificaciones</string>
    <string name="pagos">Pagos</string>
    <string name="idioma">Idioma</string>
    <string name="idiomasDisponibles">Idiomas disponibles</string>
    <string name="servicios">Servicios</string>
    <string name="info">Información</string>
    <string name="ayuda">Ayuda</string>
    <string name="cache">Borrar caché</string>
    <string name="appVersion">App Version - V1.0.0</string>
    <string name="Juliana">Juliana Riascos</string>
    <string name="emailTV">Correo electrónico</string>
    <string name="EmailTV">Correo electrónico</string>
    <string name="passwordTV">Contraseña</string>
    <string name="rememberMeTV">Recuérdame</string>
    <string name="forgotTV">¿Olvidaste tu contraseña?</string>
    <string name="loginBtnTV">Iniciar sesión</string>
    <string name="registerBtn">Registrarse</string>
    <string name="orTV">O</string>
    <string name="registerWithTV">Registrate con</string>
    <string name="correoIndicativo">Dirección de correo electrónico</string>
    <string name="kamcak">kamcak@hotmail.es</string>
    <string name="telInfo">Número de teléfono</string>
    <string name="tel">+573104101801</string>
    <string name="sexoInfo">Sexo</string>
    <string name="HombreET">Hombre</string>
    <string name="fechaInfo">Fecha de nacimiento</string>
    <string name="fechaNaci">02/08/2001</string>
    <string name="historial_transac">Historial de transacciones</string>
    <string name="infoHistDiamantes">Revisa en qué discotecas has redimido tus diamantes.</string>
    <string name="diezSesentaName">Espacio 10-60</string>
    <string name="FechaTitle">Fecha:</string>
    <string name="IDTitle">ID:</string>
    <string name="idNumber">52583270</string>
    <string name="idNumber2">52343530</string>
    <string name="numDiamantes">50</string>
    <string name="numDiamantes2">30</string>
    <string name="registerTitle">Registrarse</string>
    <string name="ContraseñaTittle">Contraseña</string>
    <string name="infoPasswordChange">Por favor asegúrese que su contraseña tenga al menos seis caracteres e incluir una combinación de números, letras y caracteres especiales (!&amp;%/$)</string>
    <string name="actualPass">Contraseña actual</string>
    <string name="newPass">Contraseña nueva</string>
    <string name="repeatPass">Repetir contraseña nueva</string>
    <string name="salir">Salir</string>
    <string name="oRegister">O</string>
    <string name="registerUserBtn">Registrarse</string>
    <string name="menuItemHome">Inicio</string>
    <string name="menuItemCarrito">Carrito</string>
    <string name="menuItemConfiguracion">Configuración</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Transacciones">Transacciones</string>
    <string name="Tarjetas">Tarjetas</string>
    <string name="ultimos_pagos">Últimos pagos</string>
    <string name="infoNotarjetas">Aún no tienes un medio de pago configurado.</string>
    <string name="crear">Crear</string>
    <string name="addCard">Añadir tarjeta</string>
    <string name="infoAddCard">Ingresa los datos de tu tarjeta</string>
    <string name="cardNumberUserConfigAdd">1244 1234 1345 3255</string>
    <string name="titularNameTitle">Nombre del Titular</string>
    <string name="yessie">Yessie</string>
    <string name="expCard">Expiración</string>
    <string name="simulDateExpCard">02/25</string>
    <string name="numCardET">Número de Tarjeta</string>
    <string name="nameCardeET">Nombre del Titular</string>
    <string name="expCardET">Fecha de Expiración</string>
    <string name="secureCodeCardET">Código de Seguridad</string>
    <string name="sugeridos">Sugeridos</string>
    <string name="espanolLang">Español (ESP)</string>
    <string name="ingleslLang">Inglés (US)</string>
    <string name="mandarinlLang">Mandarín</string>
    <string name="fancesLang">Francés</string>
    <string name="rusolLang">Ruso</string>
    <string name="alemanLang">Alemán</string>
    <string name="politicaPrivTittle">Política de privacidad</string>
    <string name="condUso">Condiciones de uso</string>
    <string name="biblioCodAbi">Bibliotecas de código abierto</string>
    <string name="reportarProblema">Reportar un problema</string>
    <string name="CambiarCorreo">Cambiar correo electrónico</string>
    <string name="NumeroTelCambiarTitle">Número de teléfono</string>
    <string name="ingresarNumTel">Ingresa tu número de teléfono</string>
    <string name="infoNotifiSMS">Es posible que te enviemos notificaciones\n por SMS con fines de seguridad\n e inicio de sesión.</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="ingresar_cod_verif">Ingresar código de verificación</string>
    <string name="change_pass_instructions">Ingresa el código que te enviamos al\ncorreo <b>kamcak@hotmail.es</b></string>
    <string name="verificar">Verificar</string>
    <string name="reenviar_cod">Reenviar código</string>
    <string name="notepreocupes">No te preocupes, no será público</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="personalizado">Personalizado</string>
    <string name="nodecir">Prefiero no decir</string>
    <string name="soporteYPreguntas">Soporte y preguntas frecuentes</string>
    <string name="politicaTitulo1">1. Tipos de datos que recolectamos</string>
    <string name="infoDescargaCondUso">MEDIANTE LA DESCARGA, LA INSTALACIÓN Y/O EL USO DE LA APLICACIÓN EN SU TERMINAL MANIFIESTA EXPRESAMENTE QUE ESTÁ DE ACUERDO, CUMPLE Y ACEPTA NUESTRAS CONDICIONES DE USO Y POLÍTICA DE PRIVACIDAD.</string>
    <string name="condUsoTitulo1">1. Identidad del titular de la aplicación</string>
    <string name="condUsoInfo1">RiseUp, es una aplicación móvil de nacionalidad colombiana, inscrita en el la cámara de comercio, Libro 39811, folio 38, hoja #B-352176, inscripción n.1.</string>
    <string name="condUsoTitulo2">2. Licencia de uso de la aplicación</string>
    <string name="condUsoInfo2">JAK es el propietario y titular de todos los derechos sobre la Aplicación y, en este sentido, otorga al usuario (licenciatario) únicamente el derecho a utilizar la misma conforme a los usos para los que la misma ha sido diseñada y, en particular, conforme a lo previsto en nuestras Condiciones de uso y/o en la ley aplicable. El usuario no adquirirá a través de la descarga, instalación y/o uso de la Aplicación ningún derecho de propiedad sobre la misma.\n\nPor tanto, la mera instalación de la Aplicación implica la aceptación por parte del usuario de las Condiciones de uso correspondientes a la Aplicación. En caso contrario, no deberá utilizarla y proceder a su desinstalación de su terminal.\n\nDe igual forma, le informamos que, en cualquier momento, podrá desinstalar la Aplicación de su dispositivo mediante las distintas opciones de configuración de este.\n\nAunque la Aplicación pueda ser accesible desde fuera de Colombia, entiende y comparte que ésta está pensada para ser utilizada por cualquier persona física que cumpla las presentes Condiciones, en cualquier país o jurisdicción en los que su uso no sea contrario a las leyes o normativas locales vigentes en cada momento.\n</string>
    <string name="condUsoTitulo3">3. Aceptación del usuario</string>
    <string name="condUsoInfo3">Estas Condiciones de Uso (en adelante Aviso Legal) regulan el acceso y utilización de la aplicación (en adelante la “Aplicación”) que LA COMPAÑÍA pone a disposición de los usuarios de Internet. El acceso a la misma implica la aceptación sin reservas del presente Aviso Legal.\n\nLA COMPAÑÍA puede ofrecer a través de la aplicación, servicios que podrán encontrarse sometidos a unas condiciones particulares propias sobre las cuales se informará al Usuario en cada caso concreto.\n\nLa Aplicación puede evolucionar y, por ello, la forma o naturaleza de la misma puede cambiar de un momento a otro sin que se le haya notificado con antelación tal cambio. Asimismo, LA COMPAÑÍA puede interrumpir (de forma temporal o permanente) la utilización de la Aplicación (o cualquiera de las características de la Aplicación) a usted o a todos los usuarios en general y, en estas circunstancias, es posible que LA COMPAÑÍA no pueda notificarle este hecho con antelación.</string>
    <string name="condUsoTitulo4">4. Acceso a la aplicación</string>
    <string name="condUsoInfo4">LA COMPAÑÍA adopta las medidas técnicas y organizativas necesarias para garantizar la protección de los datos de carácter personal y evitar su alteración, pérdida, tratamiento y/o acceso no autorizado, habida | del estado de la técnica, la naturaleza de los datos almacenados y los riesgos a que están expuestos, todo ello, conforme a lo establecido por la legislación colombiana de Protección de Datos de Carácter Personal.\n\nLA COMPAÑÍA no se hace responsable frente a los Usuarios, por la revelación de sus datos personales a terceros que no sea debida a causas directamente imputables a LA COMPAÑÍA, ni por el uso que de tales datos hagan terceros ajenos a LA COMPAÑÍA.</string>
    <string name="condUsoTitulo5">5. Uso correcto de la aplicación</string>
    <string name="condUsoInfo5">El Usuario se compromete a utilizar la aplicación, los contenidos y servicios de conformidad con la Ley, el presente Aviso Legal, las buenas costumbres y el orden público. Del mismo modo el Usuario se obliga a no utilizar la aplicación sus contenidos o los servicios que se presten a través de ésta con fines o efectos ilícitos o contrarios al contenido del presente Aviso Legal, lesivos de los intereses o derechos de terceros, o que de cualquier forma pueda dañar, inutilizar, hacer inaccesibles o deteriorar la aplicación, sus contenidos o sus servicios o impedir un normal disfrute de la misma por otros Usuarios.\n\nAsimismo, el Usuario se compromete expresamente a no destruir, alterar, inutilizar o, de cualquier otra forma, dañar los datos, programas o documentos electrónicos que se encuentren en la aplicación.\n\nEl Usuario se compromete a no obstaculizar el acceso de otros Usuarios mediante el consumo masivo de los recursos informáticos a través de los cuales LA COMPAÑÍA presta el servicio, así como realizar acciones que dañen, interrumpan o generen errores en dichos sistemas o servicios.\n\nEl Usuario se compromete a no introducir programas, virus, macros, applets, controles ActiveX o cualquier otro dispositivo lógico o secuencia de caracteres que causen o sean susceptibles de causar cualquier tipo de alteración en los sistemas informáticos de LA COMPAÑÍA o de terceros.</string>
    <string name="showCVVtxt">Mostrar CVV</string>
    <string name="addCardtxtPU">Agregar tarjeta</string>
    <string name="continueToPayBtnPU">Continuar</string>
    <string name="addedCardTitlePU">Tarjetas existentes</string>
</resources>