<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_only_top_radius">

    <LinearLayout
        android:id="@+id/lLYCardPopUpMain"
        android:layout_width="0dp"
        android:layout_height="458dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/cardsAddedTitleMain"
            style="@style/PoppinsBold_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/addedCardTitlePU"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rVAddedCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/showCVVMainButton"
            android:layout_width="144dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/cvv_button"
            android:drawableLeft="@drawable/cvv_icon"
            android:gravity="center"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/showCVVtxt"
            android:textAppearance="@style/PoppinsMed_14"

            />

        <Button
            android:id="@+id/addNewCardMainBtnPU"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@drawable/gradientborder_button"
            android:drawableRight="@drawable/addicon"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/addCardtxtPU"
            android:textAppearance="@style/PoppinsSemiBold_15_2"
            android:textColor="@color/teal_700" />

        <Button
            android:id="@+id/continuePaymentBtn"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@drawable/gradient_buttonwithoutborder"
            android:gravity="center"
            android:text="@string/continueToPayBtnPU"
            android:textAppearance="@style/PoppinsSemiBold_15" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>